Closed
Bug 215042
Opened 22 years ago
Closed 22 years ago
[FIX]frame source is not shown
Categories
(Core :: Layout: Images, Video, and HTML Frames, defect, P2)
Core
Layout: Images, Video, and HTML Frames
Tracking
()
VERIFIED
FIXED
mozilla1.6alpha
People
(Reporter: johannes.hauber, Assigned: bzbarsky)
References
()
Details
Attachments
(2 files)
|
1.83 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
|
1.57 KB,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.5a) Gecko/20030728 Mozilla Firebird/0.6.1
Build Identifier: Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.5a) Gecko/20030728 Mozilla Firebird/0.6.1
Firebird shows nothing. With IE pics and text are shown correctly. What is the
matter?
Reproducible: Always
Steps to Reproduce:
1.
2.
3.
Comment 1•22 years ago
|
||
Johannes, your "bug report" is seriously lacking information.
What is not shown? What did you do? Did you make a clean install as described in
http://firebird.bric.de/index.php?page=bugs
I think what the reporter means is theat when you try to open the
http://www.aaleninfo.de url, you get a blank page. Except the page is not blank,
the source shows that the page is there but the frame won't open
(http://213.198.63.12/ajz/index.php <-- frame url).
The bug can also be reproduced on mozilla, just go to the above url...
Comment 3•22 years ago
|
||
Ok, I see this too.
Moving over to Browser product.
Assignee: blake → frame
Component: General → Layout: HTML Frames
Product: Firebird → Browser
QA Contact: asa → madhur
Summary: nothing is shown → frame source is not shown
Version: unspecified → Trunk
| Assignee | ||
Comment 4•22 years ago
|
||
The frame will not load in NS4 either. More to the point, it loads just fine in
my tip debug build. It does _NOT_ load in a build from 7/27 (which is about
when the build in comment 0 is). But a fix for some issues that could cause
that behavior has landed since then; please retest with a current tip build.
| Assignee | ||
Comment 5•22 years ago
|
||
OK, the frame itself loads fine in a current build. The frameset is declared as:
<frameset rows="0" frameborder="0" border="0" framespacing="0">
<frame src="http://213.198.63.12/ajz/index.php" name="mainFrame">
</frameset>
Which says "make the frame 0px tall". Which is what we do. IE apparently fails
to work properly in this case.
Over to Tech Evangelism.
Assignee: frame → german
Status: UNCONFIRMED → NEW
Component: Layout: HTML Frames → German
Ever confirmed: true
OS: Windows 98 → All
Product: Browser → Tech Evangelism
QA Contact: madhur → german
Hardware: PC → All
Version: Trunk → unspecified
Comment 6•22 years ago
|
||
Re-assigning to Boris, this is a layout issue as well
Assignee: german → bz-vacation
Component: German → Layout: HTML Frames
Product: Tech Evangelism → Browser
QA Contact: german → bugzilla
Version: unspecified → Trunk
| Assignee | ||
Comment 7•22 years ago
|
||
We're all suprised this divide-by-zero didn't crash...
| Assignee | ||
Updated•22 years ago
|
Attachment #129562 -
Flags: superreview?(roc+moz)
Attachment #129562 -
Flags: review?(john)
| Assignee | ||
Comment 8•22 years ago
|
||
| Assignee | ||
Updated•22 years ago
|
Priority: -- → P2
Summary: frame source is not shown → [FIX]frame source is not shown
Target Milestone: --- → mozilla1.6alpha
| Assignee | ||
Comment 9•22 years ago
|
||
I won't be able to drive this in for 1.5, probably, so if people want it for
then someone needs to ask for approval and find people to check this in once it
has reviews...
| Assignee | ||
Comment 10•22 years ago
|
||
To caillon, since he's volunteered to drive this in...
Assignee: bz-vacation → caillon
Comment on attachment 129562 [details] [diff] [review]
patch
looks good
Attachment #129562 -
Flags: superreview?(roc+moz)
Attachment #129562 -
Flags: superreview+
Attachment #129562 -
Flags: review?(john)
Attachment #129562 -
Flags: review+
Comment 13•22 years ago
|
||
Fix checked in 09/13/2003 12:42.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 14•22 years ago
|
||
verifying with self-compiled firebird build (checkout date 00:49 CEST 2003-09-14).
Status: RESOLVED → VERIFIED
Updated•20 years ago
|
QA Contact: bugzilla → layout.html-frames
Updated•7 years ago
|
Product: Core → Core Graveyard
Updated•7 years ago
|
Component: Layout: HTML Frames → Layout: Images
Product: Core Graveyard → Core
You need to log in
before you can comment on or make changes to this bug.
Description
•