Bug 215042 - frame source is not shown Patch from bzbarsky@mit.edu r+sr=roc@ocallahan.org